name:                drinkery
version:             0
synopsis:            Boozy streaming library
description:         Boozy streaming library
homepage:            https://github.com/fumieval/drinkery#readme
license:             BSD3
license-file:        LICENSE
author:              Fumiaki Kinoshita
maintainer:          fumiexcel@gmail.com
copyright:           Copyright (c) 2017 Fumiaki Kinoshita
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Data.Drinkery
    Data.Drinkery.Class
    Data.Drinkery.Boozer
    Data.Drinkery.Distiller
    Data.Drinkery.Glass
    Data.Drinkery.Tap
  build-depends:       base >= 4.7 && < 5, transformers, mtl, comonad
  ghc-options: -Wall -O2
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/fumieval/drinkery
